# yugi

./: Cargo.toml  LICENSE
.github/workflows/: rust.yaml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/src/commands/: build.rs  new.rs
cli/tests/: cli.rs
core/: Cargo.toml
core/src/: lib.rs  markdown.rs
core/src/utils/: fs.rs  path.rs
core/tests/: markdown.rs
